Fixed a test case so it works on windows too.

--- a/test/command/4235.md
+++ b/test/command/4235.md
@@ -1,5 +1,5 @@
 ```
-% pandoc --id-prefix='foo'
+% pandoc --id-prefix=foo
 This.^[Has a footnote.]
 ^D
 <p>This.<a href="#foofn1" class="footnote-ref" id="foofnref1"><sup>1</sup></a></p>
