Add beamer option to show notes on second screen

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -10,6 +10,10 @@ $if(beamer)$
 \setbeamertemplate{caption label separator}{: }
 \setbeamercolor{caption name}{fg=normal text.fg}
 \beamertemplatenavigationsymbols$if(navigation)$$navigation$$else$empty$endif$
+$if(notes2screen)$
+\usepackage{pgfpages}
+\setbeameroption{show notes on second screen=$notes2screen$}
+$endif$
 $endif$
 $if(beamerarticle)$
 \usepackage{beamerarticle} % needs to be loaded first
