LaTeX reader: pass through macro defs in rawLaTeXBlock...
even if the `latex_macros` extension is set.
This reverts to earlier behavior and is probably safer
on the whole, since some macros only modify things in
included packages, which pandoc's macro expansion can't
modify.

Closes #4246.

--- a/test/command/4159.md
+++ b/test/command/4159.md
@@ -3,5 +3,6 @@
 \newcommand{\gen}{a\ Gen\ b}
 abc
 ^D
-[Para [Str "abc"]]
+[RawBlock (Format "latex") "\\newcommand{\\gen}{a\\ Gen\\ b}"
+,Para [Str "abc"]]
 ```
